--- a/App/GOYO/Views/Main.storyboard
+++ b/App/GOYO/Views/Main.storyboard
@@ -14,6 +14,9 @@
         <array key="NanumGothic.otf">
             <string>NanumGothicOTF</string>
         </array>
+        <array key="NanumGothicBold.ttf">
+            <string>NanumGothicBold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--MainViewController-->
@@ -92,7 +95,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚠️ 현재는 개발자에게 신고가 들어갑니다 ^^" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2h-7h-ULB">
-                                <rect key="frame" x="44.666666666666657" y="629.66666666666663" width="300.66666666666674" height="20.333333333333371"/>
+                                <rect key="frame" x="44.666666666666657" y="605.66666666666663" width="300.66666666666674" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -114,11 +117,6 @@
                             <constraint firstItem="8ft-sk-XMg" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="60" id="nWD-lS-IAI"/>
                             <constraint firstItem="Crw-Sk-Xv1" firstAttribute="top" secondItem="L2h-7h-ULB" secondAttribute="bottom" constant="5" id="nbZ-vZ-31d"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="L2h-7h-ULB"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title=" " id="RGB-XW-5Md">
                         <rightBarButtonItems>
@@ -158,16 +156,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="s4y-LJ-oZ9">
-                                <rect key="frame" x="40" y="148" width="310" height="101"/>
+                                <rect key="frame" x="40" y="148" width="310" height="103.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="신고 위치" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idi-wJ-Nhv">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="44"/>
-                                        <fontDescription key="fontDescription" name="NanumGothicOTF" family="NanumGothicOTF" pointSize="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="46.666666666666664"/>
+                                        <fontDescription key="fontDescription" name="NanumGothicBold" family="NanumGothic" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6p-1k-Pqo">
-                                        <rect key="frame" x="0.0" y="59" width="310" height="42"/>
+                                        <rect key="frame" x="0.0" y="61.666666666666657" width="310" height="42"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="현재 위치를 선택해 주세요.  ⌵"/>
@@ -178,10 +176,9 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="du5-yG-CqQ" customClass="reportButton" customModule="GOYO" customModuleProvider="target">
-                                <rect key="frame" x="20" y="626" width="350" height="75"/>
+                                <rect key="frame" x="20" y="631" width="350" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="du5-yG-CqQ" secondAttribute="height" multiplier="5:1" id="IRt-B0-bOY"/>
-                                    <constraint firstAttribute="height" constant="75" id="vxb-Na-1bn"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <state key="normal" title="신고하기"/>
@@ -191,16 +188,16 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2Ha-oY-SRA">
-                                <rect key="frame" x="40" y="373.66666666666669" width="310" height="157.00000000000006"/>
+                                <rect key="frame" x="40" y="374.33333333333331" width="310" height="155.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="신고 유형" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sR-Ja-c51">
-                                        <rect key="frame" x="0.0" y="0.0" width="147" height="48"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="149.66666666666666" height="46.666666666666664"/>
+                                        <fontDescription key="fontDescription" name="NanumGothicBold" family="NanumGothic" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="5R7-xB-OVJ">
-                                        <rect key="frame" x="0.0" y="68" width="290" height="89"/>
+                                        <rect key="frame" x="0.0" y="66.666666666666686" width="290" height="89"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bah-iF-6Wu">
                                                 <rect key="frame" x="0.0" y="0.0" width="290" height="37"/>
@@ -234,7 +231,7 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-uf-teV">
-                                <rect key="frame" x="20" y="249" width="350" height="400"/>
+                                <rect key="frame" x="20" y="251.66666666666663" width="350" height="400"/>
                                 <color key="backgroundColor" red="1" green="0.96862745100000003" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="Zpg-2l-C6T"/>
@@ -689,7 +686,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="+ 주소 추가하기">
-                                    <fontDescription key="titleFontDescription" type="system" weight="thin" pointSize="24"/>
+                                    <fontDescription key="titleFontDescription" type="system" weight="thin" pointSize="22"/>
                                     <color key="baseBackgroundColor" red="0.66278654339999998" green="0.67054682970000001" blue="0.71951222420000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                                 <connections>
